--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a:hover {
   background-color: #FAFAFA;
   margin: 30px auto;
   padding: 25px;
-  border:
+  border-radius: 5px:
 }
 
 @media (max-width: 960px) {
@@ -93,7 +93,7 @@ a:hover {
 
 .picture-resize {
   width: auto;
-  height: 200px;
+  height: 150px;
   margin: 10px 5px;
 }
 
@@ -105,6 +105,22 @@ h4 {
   line-height: 1em
 }
 
-#jumpscare img:hover {
+.jumpscare img:hover {
   transform: scale(3.0)
+}
+
+#sidebar {
+  position: fixed;
+  width: 300px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+#page-content {
+  margin-left: 0px;
+}
+
+h6 {
+  color: #4C5C68;
+  font-size: 16px;
 }
